[package]
name = "bevy_ss_anim"
version = "0.0.4"
edition = "2021"
authors = ["lemz"]
keywords = ["bevy", "sprite-sheet", "animation", "2d", "sprite"]
description = "Animated-Sprite Using Sparrow-V2 Adobe Animate Sprite Sheets"
categories = ["game-development"]
readme = "README.md"
repository = "https://github.com/lemz1/Bevy-Sprite-Sheet-Animation"
license-file = "LICENSE"


[dependencies]
bevy = {version = "0.11.2", default-features = false, features = ["bevy_asset", "bevy_sprite"]}

serde = "1.0.188"
serde-xml-rs = "0.6.0"
