[package]
name = "bevy_ss_anim"
version = "0.1.2"
edition = "2021"
authors = ["lemz"]
keywords = ["bevy", "sprite-sheet", "animation", "2d", "asset"]
description = "Animated-Sprite From Sprite-Sheets Generated In Adobe Animate"
categories = ["game-development"]
readme = "README.md"
repository = "https://github.com/lemz1/Bevy-Sprite-Sheet-Animation"
license-file = "LICENSE"


[dependencies]
bevy = {version = "^0.9", default-features = false, features = ["bevy_asset", "bevy_sprite"]}

serde = {version = "1.0.188", features = ["derive"]}
serde-xml-rs = "0.6.0"
